docs/api/qiskit/0.19/qiskit.chemistry.core.ChemistryOperator.mdx
---
title: ChemistryOperator (v0.19)
description: API reference for qiskit.chemistry.core.ChemistryOperator in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.core.ChemistryOperator
---

# ChemistryOperator

<Class id="qiskit.chemistry.core.ChemistryOperator" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/chemistry/core/chemistry_operator.py" signature="ChemistryOperator" modifiers="class">
  Base class for ChemistryOperator.

  ## Attributes

  <span id="chemistryoperator-info-num-orbitals" />

  ### INFO\_NUM\_ORBITALS

  <Attribute id="qiskit.chemistry.core.ChemistryOperator.INFO_NUM_ORBITALS" attributeValue="'num_orbitals'" />

  <span id="chemistryoperator-info-num-particles" />

  ### INFO\_NUM\_PARTICLES

  <Attribute id="qiskit.chemistry.core.ChemistryOperator.INFO_NUM_PARTICLES" attributeValue="'num_particles'" />

  <span id="chemistryoperator-info-two-qubit-reduction" />

  ### INFO\_TWO\_QUBIT\_REDUCTION

  <Attribute id="qiskit.chemistry.core.ChemistryOperator.INFO_TWO_QUBIT_REDUCTION" attributeValue="'two_qubit_reduction'" />

  <span id="chemistryoperator-info-z2symmetries" />

  ### INFO\_Z2SYMMETRIES

  <Attribute id="qiskit.chemistry.core.ChemistryOperator.INFO_Z2SYMMETRIES" attributeValue="'z2symmetries'" />

  <span id="chemistryoperator-molecule-info" />

  ### molecule\_info

  <Attribute id="qiskit.chemistry.core.ChemistryOperator.molecule_info">
    returns molecule info
  </Attribute>

  ## Methods

  <span id="chemistryoperator-process-algorithm-result" />

  ### process\_algorithm\_result

  <Function id="qiskit.chemistry.core.ChemistryOperator.process_algorithm_result" signature="ChemistryOperator.process_algorithm_result(algo_result)">
    Takes the algorithm result and processes it as required, e.g. by combination of any parts that were classically computed, for the final result.

    **Parameters**

    **algo\_result** (`Union`\[`dict`, [`MinimumEigensolverResult`](qiskit.aqua.algorithms.MinimumEigensolverResult "qiskit.aqua.algorithms.minimum_eigen_solvers.minimum_eigen_solver.MinimumEigensolverResult"), `EigensolverResult`]) – Result from algorithm

    **Return type**

    `Union`\[`Tuple`\[`List`\[`str`], `dict`], [`MolecularGroundStateResult`](qiskit.chemistry.core.MolecularGroundStateResult "qiskit.chemistry.core.chemistry_operator.MolecularGroundStateResult"), [`MolecularExcitedStatesResult`](qiskit.chemistry.core.MolecularExcitedStatesResult "qiskit.chemistry.core.chemistry_operator.MolecularExcitedStatesResult")]

    **Returns**

    Final chemistry result computed from the algorithm result
  </Function>

  <span id="chemistryoperator-run" />

  ### run

  <Function id="qiskit.chemistry.core.ChemistryOperator.run" signature="ChemistryOperator.run(qmolecule)" modifiers="abstract">
    Convert the qmolecule, according to the ChemistryOperator, into an Operator that can be given to a QuantumAlgorithm

    **Parameters**

    **qmolecule** ([*QMolecule*](qiskit.chemistry.QMolecule "qiskit.chemistry.QMolecule")) – from a chemistry driver

    **Returns**

    (qubit\_op, aux\_ops)

    **Return type**

    Tuple
  </Function>
</Class>

